# bloom-terminal

./: .clangd  .gitignore  BUILD.md  EMOJI_FIX_SUMMARY.md  FUTURE_ENHANCEMENTS.md  GLOSSARY.md  GlyphRenderingProposal.md  KNOWN_ISSUES.md  LINE_NUMBER_CORRECTIONS.md  Makefile.am  QEMU.md  README.md  TODO.md  build.sh  compile_commands.json  configure.ac
build-aux/: git-version.sh
data/: Makefile.am  bloom-terminal.el  bloom-terminal.ti
data/applications/: bloom-terminal.desktop
docs/: event-loop.md
docs/design/: 00-design-documents-index.md  01-emoji-cell-storage-analysis.md  02-cell-combining-algorithm.md  03-width-handling-and-black-boxes.md  04-emoji-detection-heuristics.md  05-implementation-checklist.md  06-colr-rendering-issues.md  CURRENT-IMPLEMENTATION-PROBLEMS.md  README.md
examples/: README.md  all_in_one  all_in_one.sh  run-examples.sh
examples/advanced/: altscreen.sh  cursor_control  scroll  window_title  window_title.sh
examples/basic/: attributes.sh  colors.sh  cursor  hello
examples/performance/: large_output  rapid_updates.sh
examples/unicode/: ambiguous_emoji.sh  box_drawing  box_drawing.sh  emoji.sh  symbols.sh  vs16_widening.sh
scripts/: build-macos-deps.sh  build-mingw64.sh  build-osxcross.sh  colr_layers.py  gen_icon.py  profile.sh  pty_record.py  ref-layers.sh  ref-png.sh  setup-osxcross.sh  vm-mac.sh  vm-w32.sh
src/: Makefile.am  bloom_conf.c  bloom_conf.h  bloom_pty.h  colr.c  colr_paint.c  common.h  event_loop.c  event_loop.h  event_loop_sdl3.c  event_loop_sdl3.h  font.c  font.h  font_backend.c  font_backend.h  font_ft.c  font_ft.h  font_ft_internal.h  font_resolve.c  font_resolve.h  font_resolve_ct.c  font_resolve_ct.h  font_resolve_fc.c  font_resolve_fc.h  font_resolve_w32.c  font_resolve_w32.h  font_resolve_win32.c  font_resolve_win32.h  font_resolver.c  font_resolver.h  main.c  platform.c  platform.h  platform_gtk4.c  platform_gtk4.h  platform_sdl3.c  platform_sdl3.h  png_mode.c  png_mode.h  png_reader.c  (+29 more)
src/bloom_vt/: FOLLOWUPS.md  bloom_vt.h  bloom_vt_internal.h  csi.c  damage.c  dcs.c  esc.c  grapheme.c  grid.c  keys.c  modes.c  osc.c  palette.c  parser.c  print.c  reflow.c  scrollback.c  style.c  term.c  width.c
tests/: Makefile.am  sdl_stubs.c  term_stubs.c  test_atlas.c  test_bvt_keys.c  test_bvt_parser.c  test_bvt_pty.c  test_conf.c  test_dmabuf_copy.c  test_helpers.h  test_pty_pause.c  test_term_bvt.c  test_unicode.c
